fix: scrollbar contrast on website vs code blocks

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -32,18 +32,18 @@ picture {
 
 *::-webkit-scrollbar-track {
   border-radius: 10px;
-  background: rgb(255 255 255 / 20%);
+  background: rgb(20 20 20 / 20%);
 }
 
 *::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background: rgb(255 255 255 / 20%);
+  background: rgb(20 20 20 / 20%);
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background: rgb(255 255 255 / 40%);
+  background: rgb(20 20 20 / 40%);
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background: rgb(255 255 255 / 90%);
+  background: rgb(20 20 20 / 90%);
 }
